Fixed: Separator block clipping when full-width

--- a/src/block/separator/editor.scss
+++ b/src/block/separator/editor.scss
@@ -6,3 +6,10 @@
 [data-type="ugb/separator"] {
 	z-index: 30 !important; // Full-width blocks are z-index 20.
 }
+[data-type="ugb/separator"][data-align="full"] {
+	.ugb-separator {
+		.ugb-separator__svg-wrapper {
+			overflow: visible;
+		}
+	}
+}
